# cacompress

./: .gitignore  CMakeLists.txt  Packages.cmake
data/: rules2.txt
inc/: COMPRESS.hpp  CUT.hpp  HUFFMAN.hpp  SOCA.hpp  UTIL.hpp
src/: CMakeLists.txt  main.cpp
